--- a/src/sass/_partials/_header-animado.scss
+++ b/src/sass/_partials/_header-animado.scss
@@ -1,5 +1,6 @@
 .header-animado{
-    background: #a2a2a2;
-    margin: 0;
-    padding: 0;
+    $h: 300px;
+    background-color: $main-color;
+    height: $h;
+    border-radius: 0;
 }
