--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400');
+
 @import '_variables';
+@import 'base';
 @import '_partials/_header-animado';
 @import '_partials/_header-nav';
- 
