--- a/src/css/main.css
+++ b/src/css/main.css
@@ -25,7 +25,32 @@ h1, h2, h3, h4, h5, h6, .title {
     background-image: url("../imagens/cenario_all_960.png");
     height: 150px;
     background-size: auto 100%;
-    background-position: 50% top; }
+    background-position: center top; }
+    .header-animado__ilustra > div {
+      display: none; }
+    @media screen and (min-width: 480px) {
+      .header-animado__ilustra {
+        background-image: url("../imagens/cenario_all_1530.png"); } }
+    @media screen and (min-width: 960px) {
+      .header-animado__ilustra {
+        background-image: url("../imagens/cenario_bg.png");
+        height: 300px;
+        position: relative; }
+        .header-animado__ilustra > div {
+          display: block;
+          height: 100%;
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 4800px; }
+      @keyframes anima_cenario {
+        from {
+          transform: translateX(-50%) translateZ(0); }
+        to {
+          transform: translateX(0) translateZ(0); } }
+        .header-animado__ilustra .nuvens {
+          background-image: url("../imagens/cenario_nuvens.png");
+          animation: anima_cenario 10s linear infinite; } }
 
 .header-nav {
   background-color: #84b8af; }
