--- a/src/css/main.css
+++ b/src/css/main.css
@@ -28,6 +28,12 @@ h1, h2, h3, h4, h5, h6, .title {
     background-position: center top; }
     .header-animado__ilustra > div {
       display: none; }
+
+@keyframes anima_cenario {
+  from {
+    transform: translateX(-50%) translateZ(0); }
+  to {
+    transform: translateX(0) translateZ(0); } }
     @media screen and (min-width: 480px) {
       .header-animado__ilustra {
         background-image: url("../imagens/cenario_all_1530.png"); } }
@@ -43,14 +49,21 @@ h1, h2, h3, h4, h5, h6, .title {
           top: 0;
           left: 0;
           width: 4800px; }
-      @keyframes anima_cenario {
-        from {
-          transform: translateX(-50%) translateZ(0); }
-        to {
-          transform: translateX(0) translateZ(0); } }
         .header-animado__ilustra .nuvens {
           background-image: url("../imagens/cenario_nuvens.png");
-          animation: anima_cenario 10s linear infinite; } }
+          animation: anima_cenario 90s linear infinite reverse; }
+        .header-animado__ilustra .casas {
+          background-image: url("../imagens/cenario_casas.png");
+          animation: anima_cenario 30s linear infinite reverse; }
+        .header-animado__ilustra .rua {
+          background-image: url("../imagens/cenario_rua.png");
+          animation: anima_cenario 30s linear infinite reverse; }
+        .header-animado__ilustra .carrosCima {
+          background-image: url("../imagens/cenario_carrosCima.png");
+          animation: anima_cenario 15s linear infinite reverse; }
+        .header-animado__ilustra .carrosBaixo {
+          background-image: url("../imagens/cenario_carrosBaixo.png");
+          animation: anima_cenario 15s linear infinite; } }
 
 .header-nav {
   background-color: #84b8af; }
