--- a/src/css/main.css
+++ b/src/css/main.css
@@ -66,6 +66,18 @@ h1, h2, h3, h4, h5, h6, .title {
           background-image: url("../imagens/cenario_carrosBaixo.png");
           animation: anima_cenario 15s linear infinite; } }
 
+.js.menu-opened {
+  overflow: hidden; }
+  .js.menu-opened:after {
+    content: "";
+    display: block;
+    position: fixed;
+    top: 50px;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.7); }
+
 .header-nav {
   background-color: #84b8af; }
   .js .header-nav {
@@ -78,7 +90,7 @@ h1, h2, h3, h4, h5, h6, .title {
     height: 50px;
     position: relative;
     top: 10px;
-    z-index: 10; }
+    z-index: 20; }
     .header-nav__logo img {
       max-width: 100%;
       height: 100%; }
@@ -95,6 +107,9 @@ h1, h2, h3, h4, h5, h6, .title {
       padding: 0 0.5em; }
       .js .header-nav__hamburgger:hover, .js .header-nav__hamburgger:focus {
         background: #74aea5; }
+      @media screen and (min-width: 680px) {
+        .js .header-nav__hamburgger {
+          display: none; } }
   .header-nav__menu {
     list-style-type: none;
     margin: 0;
@@ -107,10 +122,29 @@ h1, h2, h3, h4, h5, h6, .title {
       padding: 1em; }
       .header-nav__menu a:hover {
         background: #5c9e93; }
-    .js .header-nav__menu {
-      display: none; }
-    .menu-openned .header-nav__menu {
-      display: block; }
+    @media screen and (max-width: 680px) {
+      .js .header-nav__menu {
+        background: #4f877e;
+        z-index: 10;
+        position: fixed;
+        top: 50px;
+        left: -100%;
+        width: 80%;
+        bottom: 0;
+        transition: all .3s ease-in-out; } }
+    .menu-opened .header-nav__menu {
+      display: block;
+      left: 0; }
+      @media screen and (max-width: 680px) {
+        .menu-opened .header-nav__menu {
+          left: 0; } }
+    @media screen and (min-width: 680px) {
+      .header-nav__menu {
+        display: inline-block;
+        float: right;
+        height: 50px; }
+        .header-nav__menu li {
+          display: inline-block; } }
 
 .card-portifolio {
   margin: 15px 0;
