--- a/src/sass/_partials/_header-nav.scss
+++ b/src/sass/_partials/_header-nav.scss
@@ -1,6 +1,24 @@
+.js.menu-opened{
+    overflow: hidden;
+    
+    &:after{
+        content: "";
+        display: block;
+        position: fixed;
+        top: 50px;
+        right: 0;
+        bottom: 0;
+        left: 0;
+
+        background-color: rgba(0,0,0,.7);
+        
+    }
+
+}
+
 .header-nav{
     $h: 50px;
-
+    $breakpoint: 680px;
     background-color: lighten($main-color, 10%);
 
     .js &{
@@ -18,7 +36,7 @@
         height: $h;
         position: relative;
         top: 10px; 
-        z-index: 10;
+        z-index: 20;
 
         img{
             max-width: 100%;
@@ -29,7 +47,7 @@
     &__hamburgger{
         display: none;
 
-        .js &{
+        .js &{ 
             display: flex;
             float: right;
             height: 100%;
@@ -43,6 +61,11 @@
             &:hover, &:focus{
                 background: lighten($main-color, 5%);
             }
+
+            @media screen and(min-width: #{$breakpoint}) {
+                display: none;
+            }
+
         }
     }
 
@@ -63,13 +86,41 @@
                 background: darken($main-color, 3%);
             }
         }
-
+        
         .js &{
-            display:none;
+            @media screen and(max-width: #{$breakpoint}){
+                background: darken($main-color, 10);
+                z-index: 10;
+                position: fixed;
+                top: $h;
+                left: -100%;
+                width: 80%;
+                bottom: 0;
+                transition: left .3s ease-in-out;
+            }
+
+           
         }
 
-        .menu-openned &{
+        .menu-opened &{
             display: block;
+            
+            @media screen and(max-width: #{$breakpoint}){
+                left: 0;
+            }
+
+            left: 0;
+        }
+
+        @media screen and(min-width: #{$breakpoint}){
+            display: inline-block;
+            float: right;
+            height: $h;
+
+            li{
+                display: inline-block;
+            }
+
         }
 
     }
