--- a/src/sass/_partials/_header-animado.scss
+++ b/src/sass/_partials/_header-animado.scss
@@ -1,16 +1,11 @@
 .header-animado{
     $h: 300px;
     $largura_cenario: 2400px;
-    background-color: $main-color;
+    background-color: $header-main;
     border-radius: 0;
     padding: 96px 0 0 0;
     margin-bottom: 32px;
-
-    
-     
-    
-        height: 100%; 
-  
+    height: 100%; 
 
     &__title{
         font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
