--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400');
+@import url('https://fonts.googleapis.com/css?family=Nunito+Sans:200i,400');
+
 
 @import '_variables';
 @import 'base';
