--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,8 +1,10 @@
 // Arquivo para variaveis globais
-$main-color: #116673; 
+$main-color: #116673;  
 $header-main:#64a59a;
+$btn-textColor: #fff;
+$btn-color:#282b30;
 $no-margin: 0;
-$no-padding: 0; 
+$no-padding: 0;  
  
 
 // Colors
