--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400');
 @import url('https://fonts.googleapis.com/css?family=Nunito+Sans:200i,400');
-
+@import url('https://fonts.googleapis.com/css?family=Raleway');
 
 @import '_variables';
 @import 'base';
 @import '_partials/_header-animado';
-@import '_partials/_header-nav';
+@import '_partials/_header-nav'; 
 @import '_partials/_card-portifolio'; 
 @import '_partials/_rodape';
